# dqc1

./: .gitignore  CMakeLists.txt  DELIVERY.md  DEVELOPMENT.md  EXAMPLES.md  README.md  SEMINAR_NOTES.md  SETUP.md  STATUS.md  USAGE.md  cmake_help.txt
.github/workflows/: ci.yml
benchmarks/: bv_4.mlir  ghz_4.mlir  ghz_8.mlir  grover_4.mlir  qft_4.mlir  qft_8.mlir  teleport.mlir  vqe_4.mlir
demo/: 01_single_qubit.mlir  02_bell_state.mlir  03_ghz_state.mlir  04_measure.mlir  05_rotations.mlir  06_all_gates.mlir  07_teleportation.mlir  08_bernstein_vazirani.mlir  09_qft.mlir  10_vqe_ansatz.mlir  11_conditional.mlir  12_reset_mcx.mlir  13_repeat_loop.mlir  14_mcp_phase.mlir  dqc  run.sh
include/: CMakeLists.txt
include/dqc/: CMakeLists.txt  DQCDialect.cpp.inc  DQCDialect.h  DQCDialect.h.inc  DQCDialect.td  DQCOps.cpp.inc  DQCOps.h  DQCOps.h.inc  MLIRCompat.h  MPIDialect.cpp.inc  MPIDialect.h  MPIDialect.h.inc  MPIDialect.td  MPIOps.cpp.inc  MPIOps.h.inc  Passes.h
lib/: CMakeLists.txt  Init.cpp
lib/Dialect/: CMakeLists.txt  DQCDialect.cpp  DQCOps.cpp  MPIDialect.cpp
lib/Lowering/: CMakeLists.txt  LLVMLoweringPass.cpp  MPILoweringPass.cpp
lib/Passes/: CMakeLists.txt  PassRegistry.cpp
lib/Passes/Optimization/: CMakeLists.txt  GreedyReorderingPass.cpp
lib/Passes/Partitioning/: CMakeLists.txt  InteractionGraphPass.cpp
lib/Passes/Synthesis/: CCXDecompositionPass.cpp  CMakeLists.txt  TeleGateSynthesisPass.cpp
runtime/: CMakeLists.txt  dqc_runtime.h  gates.c  measurement.c  mpi_comm.c  state_vector.c
scripts/: dev_setup.sh
test/: CMakeLists.txt  lit.cfg.py
test/IR/: CMakeLists.txt  dqc_ir_test.mlir  gates_test.mlir  partition_example.mlir  telegate_example.mlir
test/Lowering/: CMakeLists.txt  llvm_lowering.mlir
test/Passes/: CMakeLists.txt  interaction_graph_test.mlir  reordering_test.mlir  telegate_synthesis_test.mlir
test/Passes/GreedyReordering/: CMakeLists.txt  basic.mlir  edge.mlir  invalid.mlir
test/Passes/MPILowering/: CMakeLists.txt  basic.mlir  edge.mlir  invalid.mlir
test/Passes/Partitioning/: CMakeLists.txt  basic.mlir  edge.mlir  invalid.mlir  multi_qpu.mlir
test/Passes/Synthesis/: CMakeLists.txt  basic.mlir  edge.mlir  invalid.mlir
tools/: CMakeLists.txt
tools/dqc-compile/: CMakeLists.txt  dqc-compile.cpp
tools/dqc-opt/: CMakeLists.txt  dqc-opt.cpp
